Velcro test First SandBox/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ADJ_Gross_Forecast_PC_Var_vs_Budget__c</fullName>
        <description>EMEA-only field</description>
        <formula>IF( Adjusted_Gross_Sales_Budget__c  &lt;&gt; 0,  Adjusted_Potential_full_year_forecast__c   /  Adjusted_Gross_Sales_Budget__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The % variance between the forecasted full year sales compared to the full year Budget  (Calculation = FY Adjusted Gross Sales Forecast divdied by the FY Adjusted Gross Sales Budget)</inlineHelpText>
        <label>ADJ Gross Sales Forecast % Var vs Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADJ_Gross_Forecast_PC_Var_vs_PY__c</fullName>
        <description>EMEA-only field</description>
        <formula>IF( PY_Adjusted_Gross_Sales__c &lt;&gt; 0,  Adjusted_Potential_full_year_forecast__c   /  PY_Adjusted_Gross_Sales__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The % variance of the forecasted sales for the current year compared to the Prior Year full year sales (Calculation = FY Adjusted Gross Sales Forecast divided by the PY Adjusted Gross Sales)</inlineHelpText>
        <label>ADJ Gross Sales Forecast % Var vs PY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADJ_Gross_Forecast_Var_vs_Budget__c</fullName>
        <description>EMEA-only field</description>
        <formula>Adjusted_Potential_full_year_forecast__c - Adjusted_Gross_Sales_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The variance between the forecasted full year sales compared to the full year Budget (Calculation = FY Adjusted Gross Sales Forecast minus the FY Adjusted Gross Sales Budget)</inlineHelpText>
        <label>ADJ Gross Sales Forecast Var vs Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADJ_Gross_Forecast_Var_vs_PY__c</fullName>
        <description>EMEA-only field</description>
        <formula>Adjusted_Potential_full_year_forecast__c - PY_Adjusted_Gross_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The variance of the forecasted sales for the current year compared to the Prior Year full year sales (Calculation = FY Adjusted Gross Sales Forecast minus the PY Adjusted Gross Sales)</inlineHelpText>
        <label>ADJ Gross Sales Forecast Var vs PY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADJ_Gross_MTD_Actuals_PC_Var_vs_Budget__c</fullName>
        <description>EMEA-only field</description>
        <formula>IF( Adjusted_Gross_Sales_Budget_MTD__c &lt;&gt;0, Actual_MTD_Adjusted_Gross_Sales__c /   Adjusted_Gross_Sales_Budget_MTD__c , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The % variance of the actual sales billed MTD compared to the Budget for the month. (calculation = Actual MTD Adjusted Gross Sales divided by the Budgeted MTD Adjusted Gross Sales)</inlineHelpText>
        <label>ADJ Gross sales MTD % Var vs Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADJ_Gross_MTD_Actuals_PC_Var_vs_PY__c</fullName>
        <description>EMEA-only field</description>
        <formula>IF( PY_MTD_Adjusted_Gross_Sales__c &lt;&gt; 0,  Actual_MTD_Adjusted_Gross_Sales__c  /    PY_MTD_Adjusted_Gross_Sales__c , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The % variance of the actual sales billed MTD compared to Prior Year sales for the month.  (Calculation = Actual MTD Adjusted Gross Sales divided by the PY MTD Adjusted Gross sales)</inlineHelpText>
        <label>ADJ Gross sales MTD % Var vs PY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADJ_Gross_MTD_Actuals_Var_vs_Budget__c</fullName>
        <description>EMEA-only field</description>
        <formula>Actual_MTD_Adjusted_Gross_Sales__c  - Adjusted_Gross_Sales_Budget_MTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The variance of the actual sales billed MTD compared to Budget for the month (Calculation = Actual MTD Adjusted Gross Sales minus then Budgeted MTD Adjusted Gross Sales)</inlineHelpText>
        <label>ADJ Gross Sales MTD Var vs Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADJ_Gross_MTD_Actuals_Var_vs_PY__c</fullName>
        <description>EMEA-only field</description>
        <formula>Actual_MTD_Adjusted_Gross_Sales__c - PY_MTD_Adjusted_Gross_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The variance of the actual sales billed MTD compared to the Prior Year sales for the month (Calculation = Actual MTD Adjusted Gross Sales minus the PY MTD Adjusted Gross sales)</inlineHelpText>
        <label>ADJ Gross Sales MTD Var vs PY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADJ_Gross_YTD_Actuals_PC_Var_vs_Budget__c</fullName>
        <description>EMEA-only field</description>
        <formula>IF( Adjusted_Gross_Sales_Budget_YTD__c  &lt;&gt; 0,  Actual_YTD_Adjusted_Gross_Sales__c   /  Adjusted_Gross_Sales_Budget_YTD__c  , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The % variance of the actual sales billed YTD compared to the YTD Budget (calculation = Actual YTD Adjusted Gross sales divided by the Budgeted YTD Adjusted Gross Sales)</inlineHelpText>
        <label>ADJ Gross Sales YTD % Var vs Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADJ_Gross_YTD_Actuals_PC_Var_vs_PY__c</fullName>
        <description>EMEA-only field</description>
        <formula>IF( PY_YTD_Adjusted_Gross_sales__c  &lt;&gt; 0,   Actual_YTD_Adjusted_Gross_Sales__c    /  PY_YTD_Adjusted_Gross_sales__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The % variance of the actual sales billed YTD compared to the Prior Year YTD sales (Calculation = Actual YTD Adjusted Gross sales divided by the PY YTD Adjusted Gross sales)</inlineHelpText>
        <label>ADJ Gross Sales YTD % Var vs PY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADJ_Gross_YTD_Actuals_Var_vs_Budget__c</fullName>
        <description>EMEA-only field</description>
        <formula>Actual_YTD_Adjusted_Gross_Sales__c - Adjusted_Gross_Sales_Budget_YTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The variance of the actual sales billed YTD compared to the YTD Budget (Calculation = Actual YTD Adjusted Gross sales minus the Budgeted YTD Adjusted Gross Sales)</inlineHelpText>
        <label>ADJ Gross Sales YTD Var vs Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADJ_Gross_YTD_Actuals_Var_vs_PY__c</fullName>
        <description>EMEA-only field</description>
        <formula>Actual_YTD_Adjusted_Gross_Sales__c - PY_YTD_Adjusted_Gross_sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The variance of the actual sales billed YTD compared to the Prior Year YTD sales (Calculation = Actual YTD Adjusted Gross sales minus the PY YTD Adjusted Gross sales)</inlineHelpText>
        <label>ADJ Gross Sales YTD Var vs PY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Name_Sales__c</fullName>
        <inlineHelpText>Use this to distinguish the name or function of the account other than the Billing name related to the Oracle record</inlineHelpText>
        <label>Account Name - Sales</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Past_Due__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A flag to indicate the account is past due on payment</inlineHelpText>
        <label>Account Past Due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Territory__c</fullName>
        <formula>if( Use_Secondary_Territory__c = false,  if(  ISPICKVAL(Owner.Primary_Territory__c, &apos;&apos;),&apos;No Territory Defined&apos;,text(Owner.Primary_Territory__c)),if( ISPICKVAL(Owner.Secondary_Territory__c,&apos;&apos;),&apos;No Territory Defined&apos;,text(Owner.Secondary_Territory__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_on_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EMEA-only field</description>
        <inlineHelpText>To highlight if the customer is on stop.</inlineHelpText>
        <label>Account on Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_MTD_Adjusted_Gross_Sales__c</fullName>
        <formula>Actual_MTD_Gross_Sales__c + Actual_MTD_Returns_allowances__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual Gross Sales minus the Actual Returns &amp; Allowances (Credits) for the Month</inlineHelpText>
        <label>Actual MTD Adjusted Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_MTD_Bookings__c</fullName>
        <inlineHelpText>Actual MTD Bookings from Oracle</inlineHelpText>
        <label>Actual MTD Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_MTD_Gross_Sales__c</fullName>
        <inlineHelpText>Actual MTD Gross Sales from Oracle</inlineHelpText>
        <label>Actual MTD Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_MTD_Net_Sales__c</fullName>
        <inlineHelpText>Actual MTD Net Sales from Oracle</inlineHelpText>
        <label>Actual MTD Net Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_MTD_Returns_allowances__c</fullName>
        <inlineHelpText>Returns &amp; Allowances (ie credits) for the Month</inlineHelpText>
        <label>Actual MTD Returns &amp; Allowances</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_MTD_Standard_Margin__c</fullName>
        <inlineHelpText>Actual MTD Standard Margin % from Oracle</inlineHelpText>
        <label>Actual MTD Standard Margin %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Month_Pct_Variance_to_Budget__c</fullName>
        <description>EMEA-only field</description>
        <formula>IF(Net_Budget_MTD__c &lt;&gt; 0, Actual_MTD_Net_Sales__c  /  Net_Budget_MTD__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual MTD Net Sales divided by Net Budget MTD</inlineHelpText>
        <label>Actual Month % Variance to Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Month_Variance_to_Budget__c</fullName>
        <description>EMEA-only field</description>
        <formula>Actual_MTD_Net_Sales__c  -  Net_Budget_MTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual MTD Net Sales minus Net Budget MTD</inlineHelpText>
        <label>Actual Month Variance to Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_YTD_Adjusted_Gross_Sales__c</fullName>
        <formula>Actual_YTD_Gross_Sales__c + Actual_YTD_Returns_Allowances__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual Gross Sales minus the Actual Returns &amp; Allowances (credits) for Year to date</inlineHelpText>
        <label>Actual YTD Adjusted Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_YTD_Bookings__c</fullName>
        <inlineHelpText>Actual YTD Bookings from Oracle</inlineHelpText>
        <label>Actual YTD Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_YTD_Gross_Sales__c</fullName>
        <inlineHelpText>Actual YTD Gross Sales from Oracle</inlineHelpText>
        <label>Actual YTD Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_YTD_Net_SalesPctVariance_to_Budge__c</fullName>
        <description>EMEA-only field</description>
        <formula>IF(Net_Budget_YTD__c &lt;&gt; 0, Actual_YTD_Net_Sales__c  /  Net_Budget_YTD__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual YTD Net Sales divided by Net Budget YTD</inlineHelpText>
        <label>Actual YTD Net Sales % Variance to Budge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_YTD_Net_Sales_Variance_to_Bu__c</fullName>
        <description>EMEA-only field</description>
        <formula>Actual_YTD_Net_Sales__c  -  Net_Budget_YTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual YTD Net Sales minus Net Budget YTD</inlineHelpText>
        <label>Actual YTD Net Sales Variance to Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_YTD_Net_Sales__c</fullName>
        <inlineHelpText>Actual YTD Net Sales from Oracle</inlineHelpText>
        <label>Actual YTD Net Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_YTD_Returns_Allowances__c</fullName>
        <inlineHelpText>The Returns &amp; Allowances (ie credits) for Actuals Year to Date</inlineHelpText>
        <label>Actual YTD Returns &amp; Allowances</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_YTD_Standard_Margin__c</fullName>
        <inlineHelpText>Actual YTD Standard Margin % from Oracle</inlineHelpText>
        <label>Actual YTD Standard Margin %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <inlineHelpText>Address other than shipping and billing address (such as headquarters or purchasing location)</inlineHelpText>
        <label>Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <inlineHelpText>Address other than shipping and billing address (such as headquarters or purchasing location)</inlineHelpText>
        <label>Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjusted_Gross_Sales_Budget_MTD__c</fullName>
        <formula>Gross_Budget_MTD__c + Budgeted_Returns_Allowances_MTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Budgeted Gross Sales minus the Budgeted Returns &amp; Allowances (ie credits) for the month</inlineHelpText>
        <label>Budgeted MTD Adjusted Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjusted_Gross_Sales_Budget_YTD__c</fullName>
        <formula>Gross_Budget_YTD__c + Budgeted_Returns_Allowances_YTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Budgeted Gross Sales minus the Budgeted Returns &amp; Allowances (ie credits) for Year to Date</inlineHelpText>
        <label>Budgeted YTD Adjusted Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjusted_Gross_Sales_Budget__c</fullName>
        <formula>Gross_Budget__c + Budgeted_Returns_Allowances_FY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Budgeted Gross Sales minus the Budgeted Returns &amp; Allowances (ie credits) for the Full Year</inlineHelpText>
        <label>FY Adjusted Gross Sales Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjusted_Potential_full_year_forecast__c</fullName>
        <formula>Gross_Potential_Forecast_Full_Year__c + Returns_Allowances_FY_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual Gross Sales minus the Actual Returns &amp; Allowances (credits) forecasted for the full year</inlineHelpText>
        <label>FY Adjusted Gross Sales Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <description>EMEA-only field.</description>
        <inlineHelpText>Populated from Oracle.</inlineHelpText>
        <label>Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Volume_UOM__c</fullName>
        <label>Annual Volume UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YARDS</fullName>
                </value>
                <value>
                    <fullName>FEET</fullName>
                </value>
                <value>
                    <fullName>METERS</fullName>
                </value>
                <value>
                    <fullName>INCHES</fullName>
                </value>
                <value>
                    <fullName>SETS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Volume_Units__c</fullName>
        <label>Annual Volume Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Volume__c</fullName>
        <label>Annual Volume $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <defaultValue>Today() +0</defaultValue>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Branch_Number__c</fullName>
        <label>Branch Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budgeted_Returns_Allowances_FY__c</fullName>
        <inlineHelpText>Budgeted Returns &amp; Allowances (ie Credits) for the Full year</inlineHelpText>
        <label>Budgeted Returns &amp; Allowances FY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budgeted_Returns_Allowances_MTD__c</fullName>
        <inlineHelpText>The Budgeted Returns &amp; Allowances for the Month</inlineHelpText>
        <label>Budgeted Returns &amp; Allowances MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budgeted_Returns_Allowances_YTD__c</fullName>
        <inlineHelpText>Budgeted Returns &amp; Allowances (ie credits) for the Year to Date</inlineHelpText>
        <label>Budgeted Returns &amp; Allowances YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buying_Relationship__c</fullName>
        <label>Buying Relationship</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
                <value>
                    <fullName>Outside</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMOD_Account_Id__c</fullName>
        <label>CRMOD Account Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Cash_Discount_Terms__c</fullName>
        <description>EMEA-only field</description>
        <label>Cash Discount Terms?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not Discussed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The category of the account.</inlineHelpText>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>Address other than shipping and billing address (such as headquarters or purchasing location)</inlineHelpText>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Account__c</fullName>
        <label>Comp Account</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Certifications__c</fullName>
        <label>Competitive Certifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>SUN</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>Address other than shipping and billing address (such as headquarters or purchasing location)</inlineHelpText>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Completed Credit Application is Attached below</inlineHelpText>
        <label>&lt;font color=&apos;Blue&apos;&gt;Credit Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Source_for_Hook_and_Loop__c</fullName>
        <label>Current Source for Hook and Loop</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Year_Revenue_Goal__c</fullName>
        <label>Current Year Revenue Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Category__c</fullName>
        <description>Global Market Segments</description>
        <inlineHelpText>Global Market Segments</inlineHelpText>
        <label>Customer Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBU__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive Seating</fullName>
                </value>
                <value>
                    <fullName>Automotive Interiors</fullName>
                </value>
                <value>
                    <fullName>Automotive All Other</fullName>
                </value>
                <value>
                    <fullName>Aerospace &amp; Mass Transit</fullName>
                </value>
                <value>
                    <fullName>Transportation Distributors</fullName>
                </value>
                <value>
                    <fullName>Diagnostics</fullName>
                </value>
                <value>
                    <fullName>Orthopedics</fullName>
                </value>
                <value>
                    <fullName>Surgical</fullName>
                </value>
                <value>
                    <fullName>Respiratory</fullName>
                </value>
                <value>
                    <fullName>Vascular</fullName>
                </value>
                <value>
                    <fullName>Ostomy</fullName>
                </value>
                <value>
                    <fullName>Contract Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Medical Distributors</fullName>
                </value>
                <value>
                    <fullName>Other (Small Applications)</fullName>
                </value>
                <value>
                    <fullName>Flexible Packaging</fullName>
                </value>
                <value>
                    <fullName>Rigid Packaging</fullName>
                </value>
                <value>
                    <fullName>Warehouse &amp; Logistics</fullName>
                </value>
                <value>
                    <fullName>Gift, Promotional &amp; Stationary</fullName>
                </value>
                <value>
                    <fullName>P&amp;MH Distributors</fullName>
                </value>
                <value>
                    <fullName>Other Packaging</fullName>
                </value>
                <value>
                    <fullName>Construction (Cable Management)</fullName>
                </value>
                <value>
                    <fullName>Building Envelope</fullName>
                </value>
                <value>
                    <fullName>Flooring</fullName>
                </value>
                <value>
                    <fullName>Renewable Energy</fullName>
                </value>
                <value>
                    <fullName>Tools &amp; Accessories</fullName>
                </value>
                <value>
                    <fullName>Construction Distributors</fullName>
                </value>
                <value>
                    <fullName>Infant Care</fullName>
                </value>
                <value>
                    <fullName>Child Care</fullName>
                </value>
                <value>
                    <fullName>Feminine Care</fullName>
                </value>
                <value>
                    <fullName>Adult Care</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Service_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Service Contact. All CSR with no SFDC licenses are created with a chatter free account</description>
        <label>Customer Service Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsCS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>(IF(isBlank(AnnualRevenue),0,9.09)+
IF(isBlank(BillingAddress),0,9.09)+
IF(isBlank(NumberOfEmployees ),0,9.09)+
IF(isPickVal(Industry,&quot;&quot;),0,9.09)+
IF(isBlank(Fax ),0,9.09)+
IF(isPickVal(Ownership,&quot;&quot;),0,9.09)+
IF(isBlank(Phone ),0,9.09)+
IF(isPickVal(Rating,&quot;&quot;),0,9.09)+
IF(isBlank(ShippingAddress ),0,9.09)+
IF(isBlank(Revenue_Potential__c),0,9.09)+
IF(isBlank(TickerSymbol),0,9.09)
)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date_Inactivated__c</fullName>
        <label>Date Inactivated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Direct_Sales_Status__c</fullName>
        <label>Direct Sales Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved By Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Approved by Sales Director</fullName>
                </value>
                <value>
                    <fullName>Rejected By Sales</fullName>
                </value>
                <value>
                    <fullName>Approved By Sales And Credit</fullName>
                </value>
                <value>
                    <fullName>Rejected By Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMEA_Country__c</fullName>
        <label>EMEA Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Growth_Area__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Kenya</fullName>
                </value>
                <value>
                    <fullName>Madagascar</fullName>
                </value>
                <value>
                    <fullName>Nigeria</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Holland</fullName>
                </value>
                <value>
                    <fullName>Luxembourg</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Switzerland</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>Latvia</fullName>
                </value>
                <value>
                    <fullName>Lithuania</fullName>
                </value>
                <value>
                    <fullName>Macedonia, The Former Yugoslav Republic of</fullName>
                </value>
                <value>
                    <fullName>Moldova</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMEA_Territory__c</fullName>
        <description>Holds territory specific segmentation</description>
        <inlineHelpText>For EMEA: Provide the territory name where the account belongs</inlineHelpText>
        <label>EMEA Territory</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Terms__c</fullName>
        <description>EMEA-only field</description>
        <inlineHelpText>Populated by Oracle.</inlineHelpText>
        <label>Freight Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>